// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<button
  className="Button"
>
  Hello
</button>
`;

exports[`Button renders correctly disabled 1`] = `
<button
  className="Button"
  disabled={true}
>
  Hello
</button>
`;
